FreeRADIUS 1.1.0 ; $Date $, urgency=low
	* Now uses autoconf 2.5x, and the various associated tools.
	* Include ucd-snmp-config.h, fixing use of net-snmp's
	  ucd-snmp backwards compatibility mode.
	* Move the Login-Time,Current-Time,Expiration attribute handling
	  to new modules  rlm_logintime and rlm_expiration.
        * Added %{mschap:NT-Hash <passwd>} and %{mschap: LM-Hash <passwd>},
	  and update rlm_pap to handle NT/LM-hashed passwords.
	* New rlm_protocol_filter, which permits/denies requests containing
	  certain attributes.
	* Don't escape printed strings during xlat's, to avoid the
	  infinite expansion of backslashes..
	* Better checks on incoming packets, so that rad_decode() doesn't
	  leak memory, or memcpy infinite amounts of data on bad packets.
	* Update the dictionaries, so that VALUEs with the same name,
	  but different numbers, aren't allowed.
	* rlm_eap now uses trees, rather than linked lists, to maintain
	  it's list of active sessions.
	
FreeRADIUS 1.0.0 ; $Date$, urgency=low
	pre3 -> release
	* Fix LDAP dictionary map loading.
	* Check login time allowance to packet timestamp where available.
	* Compilation fix for machines without <pthread.h>.
	* Man page improvements.
	* Grab latest config.sub and config.guess (2004-03-12).

	pre2 -> pre3
	* Make IPv6 support work better.
	* Updated 3com dictionary.
	* Fixed MD5 code to be more portable.

	pre1 -> pre2
	* Updated SQL onoff query
	* Updated Nomadix, RedBack and Valemont dictionaries.
	* MD4/MD5 fixes.
	* Don't complain about ports we're listening on when HUP'd.
	* Permit -i to work for radclient.
	* Fix bug in new proxy code.
	* rlm_passwd is now a little friendlier.
	
	Non source-code changes
	* Preliminary tests indicate that the server builds and runs on
	  Interix (SFU on Windows XP).
	* EAP module configuration is now in "raddb/eap.conf", as it was
	  getting large.
	* Updated GPL boilerplate in the source.
	* Added new RFC's to doc/rfc/